--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-modal": "^3.8.1",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
