--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react": "^16.8.6",
     "react-chat-elements": "^10.5.0",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.0.4",
     "react-modal": "^3.8.1",
     "react-moment": "^0.9.2",
     "react-native-vector-icons": "^6.4.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "url-search-params": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
