--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-design-icons": "^3.0.1",
     "moment-timezone": "^0.5.25",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-chat-elements": "^10.5.0",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
@@ -21,6 +22,7 @@
     "react-native-vector-icons": "^6.4.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-scroll-to-bottom": "^1.3.1",
     "socket.io-client": "^2.2.0",
     "url-search-params": "^1.1.0"
   },
