--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.11",
     "material-design-icons": "^3.0.1",
     "moment-timezone": "^0.5.25",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
     "react-chat-elements": "^10.5.0",
@@ -19,7 +20,9 @@
     "react-google-login": "^5.0.4",
     "react-modal": "^3.8.1",
     "react-moment": "^0.9.2",
+    "react-motion": "^0.5.2",
     "react-native-vector-icons": "^6.4.2",
+    "react-rater": "^5.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-scroll-to-bottom": "^1.3.1",
